  * doc/apt-verbatim.ent:
    - APT doesn't belong to the product 'Linux', so use 'APT' instead
      as after all APT is a big suite of applications
  * doc/examples/sources.list:
    - use the codename instead of 'stable' in the examples sources.list
      as we do in the manpage and as the debian-installer does
  * doc/apt-get.8.xml:
    - use apt-utils as package example instead of libc6

  [ Justin B Rye ]
  * doc/apt-cdrom.8.xml:
    - replace CDROM with the proper CD-ROM in text
    - correct disc vs. disk issues
  * doc/apt-extracttemplates.1.xml:
    - debconf is not DebConf
  * doc/apt-get.8.xml:
    - move dselect-upgrade below dist-upgrade
    - review and fix spelling issues
  * doc/apt-ftparchive.8.xml, doc/apt-config.8.xml,
    doc/apt-key.8.xml, doc/apt-mark.8.xml,
    doc/apt_preferences.5.xml, doc/apt-secure.8.xml,
    doc/apt-sortpkgs.1.xml, sources.list.5.xml:
    - review and fix typo, grammar and style issues
  * doc/apt.conf.5.xml:
    - review and fix typo, grammar and style issues
    - rephrase APT::Immediate-Configuration and many others

  [ Robert Luberda ]
  * Polish manpage translation update (Closes: #675603)
  * doc/apt-mark.8.xml:
    - in hold, the option name is --file not --filename

  [ Christian Perrier ]
  * French program and manpage translation update
  * Danish program translation by Joe Hansen. Closes: #675605

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 06 Jun 2012 23:54:01 +0200

apt (0.9.5.1) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/fileutl.cc:
    - dup() given compressed fd in OpenDescriptor if AutoClose
      is disabled as otherwise gzclose() and co will close it
  * doc/*.xml:
    - mark even more stuff as untranslateable and improve the
      markup here and there (no real text change)
    - use docbook DTD 4.5 instead of 4.2 to have valid docs

  [ Justin B Rye ]
  * doc/*.xml:
    - remove 'GNU/Linux' from 'Debian systems' strings as Debian